# ha-addons

./: .gitignore  README.md  repository.yaml
.github/workflows/: publish.yml  test.yml
home-assistant-cdf-extractor/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  build.yaml  config.yaml  extractor_config.yaml.tmpl  pyproject.toml  requirements.txt  run.sh
home-assistant-cdf-extractor/home_assistant_cdf_extractor/: __main__.py  extractor.py
home-assistant-cdf-extractor/src/: __main__.py  config.py  dto.py  extractor.py
